--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "0.0.3",
     "express": "^4.13.3",
     "favicon": "0.0.2",
+    "joi": "^10.4.1",
     "jsonwebtoken": "^5.0.5",
     "mysql": "^2.9.0",
     "q": "^1.4.1",
