--- a/package.json
+++ b/package.json
@@ -15,29 +15,32 @@
     "cron": "^1.1.0",
     "crypto": "0.0.3",
     "express": "^4.13.3",
+    "express-winston-2": "^0.0.2",
     "favicon": "0.0.2",
     "joi": "^10.4.1",
     "jsonwebtoken": "^5.0.5",
     "mysql": "^2.9.0",
     "q": "^1.4.1",
     "request": "^2.72.0",
-    "request-promise": "^4.1.1"
+    "request-debug": "^0.2.0",
+    "request-promise": "^4.1.1",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.5.3",
-    "sinon": "^1.17.4",
     "babel-eslint": "^6.1.2",
+    "chai": "^3.5.0",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0"
+    "eslint-plugin-react": "^6.3.0",
+    "mocha": "^2.5.3",
+    "sinon": "^1.17.4"
   },
   "peerDependencies": {
     "eslint": "^3.5.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0"
   }
 }
