Se crea configuración de correo, se envía correo cuando ocurre un error al insertar factura o detalles en intelisis

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^10.4.1",
     "jsonwebtoken": "^5.0.5",
     "mysql": "^2.9.0",
+    "nodemailer": "^6.2.1",
     "q": "^1.4.1",
     "ramda": "^0.24.1",
     "request": "^2.72.0",
