--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^10.4.1",
     "jsonwebtoken": "^5.0.5",
     "minimist": "^1.2.0",
+    "moment": "^2.24.0",
     "mysql": "^2.9.0",
     "nodemailer": "^6.2.1",
     "q": "^1.4.1",
