--- a/configs/.envDev
+++ b/configs/.envDev
@@ -3,7 +3,7 @@ ENVIRONMENT=development
 DB_HOST=10.3.102.70
 DB_USER=root
 DB_PASSWORD=Inn0vaci0n
-DB_NAME=awsDev
+DB_NAME=clickJunioAws
 DB_DATE_STRINGS=date
 DB_DEBUG=false
 DB_SHOW_QUERIES=false
