--- a/configs/.envDev
+++ b/configs/.envDev
@@ -3,12 +3,12 @@ ENVIRONMENT=development
 DB_HOST=10.3.102.70
 DB_USER=root
 DB_PASSWORD=Inn0vaci0n
-DB_NAME=ms1
+DB_NAME=clickJunioAws
 DB_DATE_STRINGS=date
 DB_DEBUG=false
 DB_SHOW_QUERIES=false
 DB_CONNECTION_LIMIT=15
 
 
-API_ERP=https://ws.compusoluciones.com/clicksuscribePruebas/
+API_ERP=https://ws.compusoluciones.com/clicksuscribeDesarrollo/
 BCC_MAIL_LIST= osestrad@compusoluciones.com; clicksuscribe@compusoluciones.com; kelizald@compusoluciones.com; mramos@compusoluciones.com
