--- a/configs/.envDev
+++ b/configs/.envDev
@@ -1,15 +1,15 @@
 ENVIRONMENT=development
 
-DB_HOST=10.3.102.75
+DB_HOST=10.3.102.70
 DB_USER=root
 DB_PASSWORD=Inn0vaci0n
-DB_NAME=azureJulio
+DB_NAME=clickAzure
 DB_DATE_STRINGS=date
 DB_DEBUG=false
 DB_SHOW_QUERIES=false
 DB_CONNECTION_LIMIT=15
 
 
-API_ERP=https://ws.compusoluciones.com/clicksuscribePruebas/
+API_ERP=http://localhost:54374/
 API_MS=http://localhost:8083/
 BCC_MAIL_LIST= osestrad@compusoluciones.com; clicksuscribe@compusoluciones.com; kelizald@compusoluciones.com;
