--- a/configs/.envDev
+++ b/configs/.envDev
@@ -3,7 +3,7 @@ ENVIRONMENT=development
 DB_HOST=10.3.102.70
 DB_USER=root
 DB_PASSWORD=Inn0vaci0n
-DB_NAME=newAD
+DB_NAME=microsoft
 DB_DATE_STRINGS=date
 DB_DEBUG=false
 DB_SHOW_QUERIES=false
@@ -11,4 +11,4 @@ DB_CONNECTION_LIMIT=15
 
 
 API_ERP=http://localhost:54374/
-BCC_MAIL_LIST= clicksuscribe@compusoluciones.com; kelizald@compusoluciones.com
+BCC_MAIL_LIST= clicksuscribe@compusoluciones.com
