--- a/configs/.envDev
+++ b/configs/.envDev
@@ -1,9 +1,9 @@
 ENVIRONMENT=development
 
-DB_HOST=10.3.102.70
-DB_USER=root
-DB_PASSWORD=Inn0vaci0n
-DB_NAME=microsoft
+DB_HOST=db-sicliksuscribe-staging.crwhfvngz1ns.us-east-1.rds.amazonaws.com
+DB_USER=jvaltierra
+DB_PASSWORD=joelCLICK_2022
+DB_NAME=clicksuscribe
 DB_DATE_STRINGS=date
 DB_DEBUG=false
 DB_SHOW_QUERIES=false
