--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "CompuSoluciones",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.5",
     "bluebird": "^3.4.7",
     "body-parser": "^1.13.3",
     "cron": "^1.1.0",
