--- a/configs/.envStage
+++ b/configs/.envStage
@@ -1,8 +1,9 @@
 ENVIRONMENT=staging
 
+
 DB_HOST=db-sicliksuscribe-staging.crwhfvngz1ns.us-east-1.rds.amazonaws.com
-DB_USER=jvaltierra
-DB_PASSWORD=joelCLICK_2022
+DB_USER=DemoStage
+DB_PASSWORD=demoSTAGE_2021
 DB_NAME=clicksuscribe
 DB_DATE_STRINGS=date
 DB_DEBUG=false
@@ -14,5 +15,5 @@ ROUTE_PROJECTS_BY_RFC=governance/projects/by/rfc
 ROUTE_BILLING_VENTA=governance/billing/insert
 INTELIS_HOST=http://localhost:9012/
 
-API_ERP=https://ws.compusoluciones.com/clicksuscribePruebas/
+API_ERP=https://ws.compusoluciones.com/clicksuscribe/
 BCC_MAIL_LIST= josedera@compusoluciones.com; 
